<resources>
    <string name="app_name">Basic plan for transport issue</string>

    <string name="hello">Hello!!</string>

    <string name="north_west">Northwest</string>
    <string name="north_east">Northeast</string>
    <string name="south_west">Southwest</string>
    <string name="south_east">Southeast</string>

    <string name="source_data">SOURCE DATA</string>
    <string name="back">BACK</string>
    <string name="transportation_cost">Transportation cost:</string>

    <string name="enter_a_the_number_of_stocks">Enter A - the number of stocks</string>
    <string name="add_ai">Add Ai</string>
    <string name="next">NEXT</string>


    <string name="enter_b_required_quantity_of_products">Enter B - required quantity of products</string>
    <string name="add_bi">Add Bi</string>

    <string name="_0">0</string>
    <string name="ai">Ai:</string>
    <string name="bi">Bi:</string>
    <string name="enter_costs_of_transportation">Enter costs of transportation</string>
    <string name="minimum_cost">Minimum cost</string>
    <string name="delete_bi">Delete bi</string>
    <string name="delete_ai">Delete ai</string>
    <string name="press_to_view_n_an_example">Press to view\n an example</string>
    <string name="press_to_start_n_with_your_data">Press to start\n with your data</string>
    <string name="sample">Sample</string>
    <string name="start">Start!</string>
    <string name="welcome_to_the_transport_issue_program">Welcome to the transport issue program!</string>
    <string name="start_again">start again</string>

</resources>
